--- a/WebServices/Views/Home/Index.cshtml
+++ b/WebServices/Views/Home/Index.cshtml
@@ -1,21 +1,111 @@
 ﻿@using WebServices.Models
 
-@model IEnumerable<Reservation>
-
 @{
     ViewBag.Title = "Reservations";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 @section Scripts{
+    <script>
+        var model = {
+            reservations: ko.observableArray(),
+            editor: {
+                name: ko.observable(""),
+                location: ko.observable("")
+            }
+        };
 
+        function sendAjaxRequest(httpMethod, callback, url, reqData) {
+            $.ajax("/api/web" + (url ? "/" + url : ""),
+                {
+                    type: httpMethod,
+                    success: callback,
+                    data: reqData
+                });
+        }
+
+        function getAllItems() {
+            sendAjaxRequest("GET",
+                function (data) {
+                    model.reservations.removeAll();
+                    for (var i = 0; i < data.length; i++) {
+                        model.reservations.push(data[i]);
+                    }
+                });
+        }
+
+        function removeItem(item) {
+            sendAjaxRequest("DELETE",
+                function () {
+                    for (var i = 0; i < model.reservations().length; i++) {
+                        if (model.reservations()[i].ReservationId == item.ReservationId) {
+                            model.reservations.remove(model.reservations()[i]);
+                            break;
+                        }
+                    }
+                },
+                item.reservations);
+        }
+
+        function handleEditorClick() {
+            sendAjaxRequest("POST",
+                function (newItem) {
+                    model.reservations.push(newItem);
+                },
+                null,
+                {
+                    ClientName: model.editor.name,
+                    Location: model.editor.location
+                });
+        }
+
+        $(document).ready(function () {
+            getAllItems();
+            ko.applyBindings(model);
+        });
+    </script>
 }
 
 @section Body{
     <div id="summary" class="card card-header">
-        @Html.Partial("Summary", Model)
+        <div class="card-header">Reservation Summary</div>
+        <div class="card-header">
+            <table class="table table-striped table-sm">
+                <thead>
+                    <tr><th>ID</th><th>Name</th><th>Location</th><th></th></tr>
+                </thead>
+                <tbody data-bind="foreach: model.reservations">
+                    <tr>
+                        <td data-bind="text: ReservationId"></td>
+                        <td data-bind="text: ClientName"></td>
+                        <td data-bind="text: Location"></td>
+                        <td>
+                            <button class="btn btn-sm btn-primary"
+                                    data-bind="click: removeItem">
+                                Remove
+                            </button>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
+
     <div id="editor" class="card card-header">
-        @Html.Partial("Editor", new Reservation())
+        <div class="card-header">Create Reservation</div>
+        <div class="card-header">
+            <div class="form-group">
+                <label>Client Name</label>
+                <input class="form-control" data-bind="value: model.editor.name" />
+            </div>
+            <div class="form-group">
+                <label>Location</label>
+                <input class="form-control" data-bind="value: model.editor.location" />
+            </div>
+            <button class="btn btn-primary"
+                    data-bind="click: handleEditorClick">
+                Save
+            </button>
+        </div>
     </div>
 }
