--- a/WebServices/Views/Shared/_Layout.cshtml
+++ b/WebServices/Views/Shared/_Layout.cshtml
@@ -10,6 +10,8 @@
     <title>@ViewBag.Title</title>
     <link href="~/Content/bootstrap.css" rel="stylesheet" />
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
+    <script src="~/Scripts/jquery-3.4.1.js"></script>
+    <script src="~/Scripts/knockout-3.5.0.js"></script>
     @RenderSection("Scripts")
 </head>
 <body>
