--- a/WebServices/Views/Home/Index.cshtml
+++ b/WebServices/Views/Home/Index.cshtml
@@ -12,7 +12,8 @@
             editor: {
                 name: ko.observable(""),
                 location: ko.observable("")
-            }
+            },
+            displaySummary: ko.observable(true)
         };
 
         function sendAjaxRequest(httpMethod, callback, url, reqData) {
@@ -44,13 +45,18 @@
                         }
                     }
                 },
-                item.reservations);
+                item.ReservationId);
+        }
+
+        function handleCreateClick() {
+            model.displaySummary(false);
         }
 
         function handleEditorClick() {
             sendAjaxRequest("POST",
                 function (newItem) {
                     model.reservations.push(newItem);
+                    model.displaySummary(true);
                 },
                 null,
                 {
@@ -67,7 +73,8 @@
 }
 
 @section Body{
-    <div id="summary" class="card card-header">
+    <div id="summary" class="card card-header"
+         data-bind="if: model.displaySummary">
         <div class="card-header">Reservation Summary</div>
         <div class="card-header">
             <table class="table table-striped table-sm">
@@ -88,10 +95,15 @@
                     </tr>
                 </tbody>
             </table>
+            <button class="btn btn-primary"
+                    data-bind="click: handleCreateClick">
+                Create
+            </button>
         </div>
     </div>
 
-    <div id="editor" class="card card-header">
+    <div id="editor" class="card card-header"
+         data-bind="ifnot: model.displaySummary">
         <div class="card-header">Create Reservation</div>
         <div class="card-header">
             <div class="form-group">
